pointer cursor on the arrow for the dropdown

--- a/Sass/component.scss
+++ b/Sass/component.scss
@@ -65,6 +65,7 @@ body {
         margin-bottom: 2rem;
         img {
           align-self: flex-start;
+          cursor: pointer;
         }
       }
     }
