--- a/Sass/component.scss
+++ b/Sass/component.scss
@@ -35,7 +35,7 @@ body {
   background-color: $almost-white;
   right: 0;
   top: 0;
-  height: 100vh;
+  height: 100%;
   width: 23rem;
   padding: 2rem;
   transition: all 0.5s ease-in-out;
