Mobile Layout Completed

--- a/Sass/_variables.scss
+++ b/Sass/_variables.scss
@@ -3,6 +3,6 @@ $almost-black: rgb(20, 20, 20);
 $overlay: rgba(20, 20, 20, 0.65);
 $medium-gray: hsl(0, 0%, 41%);
 $default-font-size: 1.8rem;
-$font-family: "sans-serif";
+$font-family: "Epilogue", sans-serif;
 $fw-500: 500;
 $fw-700: 700;
