--- a/Sass/_mobile-navigation.scss
+++ b/Sass/_mobile-navigation.scss
@@ -1,19 +1,25 @@
 @import "variables";
-body {
-  position: relative;
-  font-family: Arial, Helvetica, sans-serif;
-}
+
 .overlay {
-  background-color: $overlay;
-  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 5;
+  transition: background-color;
+  transition-delay: 0.2s;
 }
-// hide dropdown when menu
+// hide dropdown
 .dropdown-hidden {
   display: none;
 }
+// hide navigation
 .hidden {
-  transform: translateX(30rem);
   opacity: 0;
+  transform: translateX(30rem);
 }
 .nav-images {
   display: flex;
@@ -22,12 +28,11 @@ body {
   padding: 2rem;
   .hamburger {
     cursor: pointer;
-    z-index: 100;
+    z-index: 101;
   }
 }
 
 .navigation {
-  overflow: hidden;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -35,12 +40,15 @@ body {
   background-color: $almost-white;
   right: 0;
   top: 0;
-  height: 100%;
+  overflow: hidden;
+  height: 100vh;
   width: 23rem;
   padding: 2rem;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  z-index: 100;
   .navigation__main-list {
-    margin-top: 5rem;
+    overflow: hidden;
+    margin-top: 4rem;
     li {
       padding: 1rem;
     }
@@ -55,6 +63,9 @@ body {
       color: $medium-gray;
       font-weight: $fw-700;
     }
+    .menu-icon {
+      cursor: pointer;
+    }
     .dropdown {
       margin-top: 2rem;
       &__list-item {
@@ -65,7 +76,6 @@ body {
         margin-bottom: 2rem;
         img {
           align-self: flex-start;
-          cursor: pointer;
         }
       }
     }
@@ -73,6 +83,25 @@ body {
   .cta {
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    gap: 1.2rem;
+    button {
+      cursor: pointer;
+      font-size: 1.6rem;
+      text-align: center;
+      border: 0;
+      background: none;
+      color: $medium-gray;
+      margin-bottom: 1rem;
+    }
+    .register {
+      border: 1px solid $almost-black;
+      padding: 1.1rem 2rem;
+      border-radius: 15px;
+      transition: background-color 0.3s ease-in-out;
+      &:hover {
+        color: $almost-white;
+        background-color: $almost-black;
+      }
+    }
   }
 }
