--- a/app.css
+++ b/app.css
@@ -2,6 +2,11 @@
   font-size: 62.5%;
 }
 
+body {
+  position: relative;
+  font-family: "Epilogue", sans-serif;
+}
+
 html {
   box-sizing: border-box;
   font-size: 1.8rem;
@@ -38,14 +43,17 @@ img {
   height: auto;
 }
 
-body {
-  position: relative;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 .overlay {
-  background-color: rgba(20, 20, 20, 0.65);
-  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 5;
+  transition: background-color;
+  transition-delay: 0.2s;
 }
 
 .dropdown-hidden {
@@ -53,8 +61,8 @@ body {
 }
 
 .hidden {
-  transform: translateX(30rem);
   opacity: 0;
+  transform: translateX(30rem);
 }
 
 .nav-images {
@@ -65,11 +73,10 @@ body {
 }
 .nav-images .hamburger {
   cursor: pointer;
-  z-index: 100;
+  z-index: 101;
 }
 
 .navigation {
-  overflow: hidden;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -77,13 +84,16 @@ body {
   background-color: hsl(0deg, 0%, 98%);
   right: 0;
   top: 0;
+  overflow: hidden;
   height: 100vh;
   width: 23rem;
   padding: 2rem;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  z-index: 100;
 }
 .navigation .navigation__main-list {
-  margin-top: 5rem;
+  overflow: hidden;
+  margin-top: 4rem;
 }
 .navigation .navigation__main-list li {
   padding: 1rem;
@@ -98,6 +108,9 @@ body {
   text-decoration: none;
   color: hsl(0deg, 0%, 41%);
   font-weight: 700;
+}
+.navigation .navigation__main-list .menu-icon {
+  cursor: pointer;
 }
 .navigation .navigation__main-list .dropdown {
   margin-top: 2rem;
@@ -115,7 +128,74 @@ body {
 .navigation .cta {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 1.2rem;
+}
+.navigation .cta button {
+  cursor: pointer;
+  font-size: 1.6rem;
+  text-align: center;
+  border: 0;
+  background: none;
+  color: hsl(0deg, 0%, 41%);
+  margin-bottom: 1rem;
+}
+.navigation .cta .register {
+  border: 1px solid rgb(20, 20, 20);
+  padding: 1.1rem 2rem;
+  border-radius: 15px;
+  transition: background-color 0.3s ease-in-out;
+}
+.navigation .cta .register:hover {
+  color: hsl(0deg, 0%, 98%);
+  background-color: rgb(20, 20, 20);
+}
+
+.main__content {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 2rem;
+}
+.main__content-title {
+  color: rgb(20, 20, 20);
+  font-size: 3.5rem;
+  margin-bottom: 1.5rem;
+  font-weight: 700;
+}
+.main__content-description {
+  font-size: 1.6rem;
+  color: hsl(0deg, 0%, 41%);
+  margin-bottom: 1.8rem;
+  line-height: 1.6;
+}
+.main__content-btn {
+  font-size: 1.6rem;
+  font-weight: 700;
+  border: 0;
+  background-color: rgb(20, 20, 20);
+  color: hsl(0deg, 0%, 98%);
+  padding: 1.35rem 2.5rem;
+  border-radius: 15px;
+  cursor: pointer;
+  margin-bottom: 2rem;
+  transition: all 0.3s ease-in-out;
+}
+.main__content-btn:hover {
+  color: hsl(0deg, 0%, 98%);
+  opacity: 0.5;
+}
+.main__clients {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+.main__clients img {
+  object-fit: cover;
+  width: 7.5rem;
 }
 
 /*# sourceMappingURL=app.css.map */
