--- a/Sass/_main.scss
+++ b/Sass/_main.scss
@@ -1,5 +1,15 @@
 @import "variables";
+@import "mixin";
 .main {
+  @include desktop() {
+    display: flex;
+    flex-direction: row-reverse;
+    padding: 10rem 13rem;
+  }
+  &__description {
+    display: flex;
+    flex-direction: column;
+  }
   &__content {
     padding: 2rem;
     display: flex;
@@ -13,12 +23,22 @@
       font-size: 3.5rem;
       margin-bottom: 1.5rem;
       font-weight: $fw-700;
+      @include desktop() {
+        text-align: left;
+        font-size: 7.3rem;
+        margin-bottom: 4rem;
+      }
     }
     &-description {
       font-size: 1.6rem;
       color: $medium-gray;
       margin-bottom: 1.8rem;
       line-height: 1.6;
+      @include desktop() {
+        text-align: left;
+        font-size: 2.1rem;
+        margin-bottom: 5rem;
+      }
     }
     &-btn {
       font-size: 1.6rem;
@@ -31,6 +51,10 @@
       cursor: pointer;
       margin-bottom: 2rem;
       transition: all 0.3s ease-in-out;
+      @include desktop() {
+        align-self: flex-start;
+        font-size: 2rem;
+      }
       &:hover {
         color: $almost-white;
         opacity: 0.5;
@@ -42,9 +66,18 @@
     align-items: center;
     justify-content: center;
     gap: 2rem;
+    @include desktop() {
+      justify-content: flex-start;
+      padding: 2rem;
+      gap: 4rem;
+      margin-top: 7rem;
+    }
     img {
       object-fit: cover;
       width: 7.5rem;
+      @include desktop() {
+        width: initial;
+      }
     }
   }
 }
