--- a/app.css
+++ b/app.css
@@ -153,6 +153,17 @@ img {
   background-color: rgb(20, 20, 20);
 }
 
+@media (min-width: 950px) {
+  .main {
+    display: flex;
+    flex-direction: row-reverse;
+    padding: 10rem 13rem;
+  }
+}
+.main__description {
+  display: flex;
+  flex-direction: column;
+}
 .main__content {
   padding: 2rem;
   display: flex;
@@ -168,11 +179,25 @@ img {
   margin-bottom: 1.5rem;
   font-weight: 700;
 }
+@media (min-width: 950px) {
+  .main__content-title {
+    text-align: left;
+    font-size: 7.3rem;
+    margin-bottom: 4rem;
+  }
+}
 .main__content-description {
   font-size: 1.6rem;
   color: hsl(0deg, 0%, 41%);
   margin-bottom: 1.8rem;
   line-height: 1.6;
+}
+@media (min-width: 950px) {
+  .main__content-description {
+    text-align: left;
+    font-size: 2.1rem;
+    margin-bottom: 5rem;
+  }
 }
 .main__content-btn {
   font-size: 1.6rem;
@@ -186,6 +211,12 @@ img {
   margin-bottom: 2rem;
   transition: all 0.3s ease-in-out;
 }
+@media (min-width: 950px) {
+  .main__content-btn {
+    align-self: flex-start;
+    font-size: 2rem;
+  }
+}
 .main__content-btn:hover {
   color: hsl(0deg, 0%, 98%);
   opacity: 0.5;
@@ -196,9 +227,22 @@ img {
   justify-content: center;
   gap: 2rem;
 }
+@media (min-width: 950px) {
+  .main__clients {
+    justify-content: flex-start;
+    padding: 2rem;
+    gap: 4rem;
+    margin-top: 7rem;
+  }
+}
 .main__clients img {
   object-fit: cover;
   width: 7.5rem;
+}
+@media (min-width: 950px) {
+  .main__clients img {
+    width: initial;
+  }
 }
 
 /*# sourceMappingURL=app.css.map */
