--- a/Sass/_main.scss
+++ b/Sass/_main.scss
@@ -5,10 +5,14 @@
     display: flex;
     flex-direction: row-reverse;
     padding: 10rem 13rem;
+    gap: 25rem;
   }
   &__description {
-    display: flex;
-    flex-direction: column;
+    @include desktop() {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
   }
   &__content {
     padding: 2rem;
@@ -25,7 +29,7 @@
       font-weight: $fw-700;
       @include desktop() {
         text-align: left;
-        font-size: 7.3rem;
+        font-size: 7.5rem;
         margin-bottom: 4rem;
       }
     }
@@ -68,13 +72,12 @@
     gap: 2rem;
     @include desktop() {
       justify-content: flex-start;
-      padding: 2rem;
       gap: 4rem;
-      margin-top: 7rem;
     }
     img {
       object-fit: cover;
       width: 7.5rem;
+      cursor: pointer;
       @include desktop() {
         width: initial;
       }
