--- a/app.css
+++ b/app.css
@@ -158,11 +158,15 @@ img {
     display: flex;
     flex-direction: row-reverse;
     padding: 10rem 13rem;
+    gap: 25rem;
   }
 }
-.main__description {
-  display: flex;
-  flex-direction: column;
+@media (min-width: 950px) {
+  .main__description {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 }
 .main__content {
   padding: 2rem;
@@ -182,7 +186,7 @@ img {
 @media (min-width: 950px) {
   .main__content-title {
     text-align: left;
-    font-size: 7.3rem;
+    font-size: 7.5rem;
     margin-bottom: 4rem;
   }
 }
@@ -230,14 +234,13 @@ img {
 @media (min-width: 950px) {
   .main__clients {
     justify-content: flex-start;
-    padding: 2rem;
     gap: 4rem;
-    margin-top: 7rem;
   }
 }
 .main__clients img {
   object-fit: cover;
   width: 7.5rem;
+  cursor: pointer;
 }
 @media (min-width: 950px) {
   .main__clients img {
